JumpScript/tests/baselines/reference/asyncFunctionDeclaration8_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.jump(1,12): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.jump(1,20): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.jump (2 errors) ====
    var v = { [await]: foo }
               ~~~~~
!!! error TS2304: Cannot find name 'await'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.